--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ body {
 .sticky-cont {
   width: 15rem;
   height: 15rem;
-
   position: absolute;
   left: 15rem;
   top: 18rem;
+  z-index: 1000;
   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 }
 
@@ -165,4 +165,9 @@ body {
   width: 1rem;
   height: 1rem;
   background-color: red;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
